fix animation cards and scrollbar color

--- a/src/styles/accueil.css
+++ b/src/styles/accueil.css
@@ -113,7 +113,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: #ffffff;
+	background-color: #000000;
 	-webkit-transition: .4s;
 	transition: .4s;
 }
@@ -129,20 +129,21 @@
 	width: 35px;
 	left: 4px;
 	bottom: 3px;
-	background-color: rgb(0, 0, 0);
+	background-color: rgb(244, 244, 244);
 	-webkit-transition: .4s;
+	color: black;
 	transition: .4s;
 }
 
 input:checked + .slider {
-	background-color: #000000;
+	background-color: #ffffff;
 }
 
 input:checked + .slider:before {
 	transform: translateX(57px);
-	background-color: rgb(237, 237, 237);
+	background-color: rgb(0, 0, 0);
 	content: "Light";
-	color: black;
+	color: rgb(255, 255, 255);
 }
 
 .slider {
